[metadata]
url = https://github.com/rklomp/pyintesishome-local
license      = MIT
license_file = LICENSE
platforms    = any
description  = A python3 library to communicate locally with IntesisHome devices.
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages=find:

[options.packages.find]
exclude = tests

[isort]
profile=black

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
ignore_missing_imports = True

[pylint.'MESSAGES CONTROL']
disable = unused-argument, too-many-public-methods